# p4Practico1

./: CMakeLists.txt  main.cpp
Ejercicio 12/: CalcularSueldos.cpp  ColEmpleados.cpp  ColEmpleados.h  Empleado.cpp  Empleado.h  EmpleadoComun.cpp  EmpleadoComun.h  Jornalero.cpp  Jornalero.h
Ejercicio 4/: Punto.cpp  Punto.h  Segmento.cpp  Segmento.h
Ejercicio 5/: Fecha.cpp  Fecha.h
Ejercicio 6/: String.cpp  String.h
Ejercicio 7/: Racional.cpp  Racional.h
