cmake_minimum_required(VERSION 3.21)
project(Practico_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Practico_1 main.cpp "Ejercicio 4/Punto.cpp" "Ejercicio 4/Punto.h" "Ejercicio 4/Segmento.cpp" "Ejercicio 4/Segmento.h" "Ejercicio 5/Fecha.cpp" "Ejercicio 5/Fecha.h" "Ejercicio 6/String.cpp" "Ejercicio 6/String.h")
